<resources>

    <string name="app_name">Automation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Automation</string>
    <string name="nav_header_subtitle">cdwatts2001@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="connect">Connect</string>
    <string name="add">Add Device</string>

    <string name="addText">Add devices here</string>
    <string-array name="deviceType">
        <item>Light</item>
        <item>Door</item>
    </string-array>

    <string name="id">Device ID</string>
    <string name="name">Device Name</string>
    <string name="submit">Submit</string>
    <string name="onSwitch">Off/On</string>

    <string name="test">Test</string>
    <string name="comingSoon">Coming Soon</string>

    <string-array name="routines">
        <item>Solid</item>
        <item>Snake</item>
        <item>Fade</item>
    </string-array>

    <string-array name="colors">
        <item>Baby Blue</item>
        <item>Pale Pink</item>
        <item>Pale Yellow</item>
    </string-array>

</resources>
